--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -294,6 +294,107 @@ More to come on fibers as we progress through the Quantum Journey
 \end{frame}
 
 
+\begin{frame}\frametitle{Dispersion}
+Dispersion is defined to be the spreading of white light into its full spectrum of wavelengths.
+
+\begin{center}
+\includegraphics[width=10cm]{fig/rainbow.jpg}
+\end{center}
+
+\begin{itemize}
+\item The angle of refraction depends on the index of refraction.
+\item The index of refraction (n) depends on the properties of the medium.
+\item However, for a given medium, n also depends on the optical wavelength.
+\end{itemize}
+
+
+\end{frame}
+
+\begin{frame}\frametitle{Index of Refraction by Wavelength}
+Index of refraction ($n$) by wavelength ($\lambda$):
+
+\begin{center}
+\includegraphics[width=10cm]{fig/nbylambda.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Glass Prism}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[height=3.6cm]{fig/gpideal.jpg}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[height=3.7cm]{fig/gpreal.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Rainbow}
+\begin{center}
+\includegraphics[width=6cm]{fig/rainbow2.jpg}
+\end{center}
+Rainbows are produced by a combination of refraction and reflection. You may have noticed that you see a rainbow only when you look away from the sun. Light enters a drop of water and is reflected from the back of the drop. The light is refracted both as it enters and as it leaves the drop. Since the index of refraction of water varies with wavelength, the light is dispersed, and a rainbow is observed.
+\end{frame}
+
+\begin{frame}\frametitle{Rainbow as an Arc}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/rainbow3.jpg}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/rainbow4.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\section{Lens}
+
+\begin{frame}\frametitle{Lens}
+With the Law of Refraction, we can explore the properties of lens and how images are formed.
+\begin{columns}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item The word lens comes from the Latin word for lentil bean, the shape of which is similar to a convex lens.
+\item Convex Lens: all light rays that enter parallel to the axis cross one another at  a single point on the opposite side of the lens, i.e., they converge.
+\item Concave Lens: all light rays that enter parallel to the axis diverge (bend away) from the lens axis.
+\end{itemize}
+\end{column}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/cavevex.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Convex Lens}
+With the Law of Refraction, we can explore the properties of lens and how images are formed.
+\begin{columns}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item The point at which the rays crossed is defined as the Focal point ($F$) of the lens.
+\item The distance from the center of the lens to its focal point is called the focal length ($f$).
+\end{itemize}
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/cavevex.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
 \section{Polarization}
 
 \begin{frame}\frametitle{Electromagnetic Wave}
