--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -414,21 +414,129 @@ With the Law of Refraction, we can explore the properties of lens and how images
 \begin{frame}\frametitle{Convex Lens}
 With the Law of Refraction, we can explore the properties of lens and how images are formed.
 \begin{columns}
-\begin{column}{6.5cm}
+\begin{column}{6cm}
 \begin{itemize}
+\item A ray of light bends (refracts) at both interface, and for convex lens converge.
 \item The point at which the rays crossed is defined as the Focal point ($F$) of the lens.
 \item The distance from the center of the lens to its focal point is called the focal length ($f$).
+\item The Power of the lens, measuring in Diopters ($P=\frac{1}{f}$) where $f$ is measured in meters.
 \end{itemize}
 \end{column}
-\begin{column}{4cm}
+\begin{column}{5cm}
 \begin{center}
-\includegraphics[width=3cm]{fig/cavevex.jpg}
+\includegraphics[width=4cm]{fig/convex1.jpg}
+
+\vspace{0.25cm}
+\includegraphics[width=4cm]{fig/convex2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Concave Lens}
+\begin{columns}
+\begin{column}{6cm}
+\begin{itemize}
+\item A concave lens is a diverging lens, it causes light rays to bend away from the axis.
+\item In the case of all rays entering parallel to its axis, the light appears to originate at the same point $F$.
+\item The distance from the center of the lens to its focal point is called the focal length ($f$) and is defined to be negative.
+\end{itemize}
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/concave1.jpg}
+
+\vspace{0.25cm}
+\includegraphics[width=4cm]{fig/concave2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Thin Lens}
+A thin lens is defined to be one whose thickness allows rays to refract but does not allow properties such as dispersion and aberrations.
+\end{frame}
+
+\begin{frame}\frametitle{Ray Tracing}
+\begin{columns}
+\begin{column}{7.4cm}
+\begin{enumerate}
+\item A ray entering a converging lens parallel to its axis passes through the focal point F of the lens on the other side.
+\item A ray entering a diverging lens parallel to its axis seems to come from the focal point F.
+\item A ray passing through the center of either a converging or a diverging lens does not change direction.
+\item A ray entering a converging lens through its focal point exits parallel to its axis.
+\item A ray that enters a diverging lens by heading toward the focal point on the opposite side exits parallel to the axis.
+\end{enumerate}
+
+
+\end{column}
+\begin{column}{4.6cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/raytrace.jpg}
 \end{center}
 \end{column}
 \end{columns}
 \end{frame}
 
 
+\begin{frame}\frametitle{Image Formation}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/imageform1.jpg}
+\end{center}
+
+
+Thin Lens equations:
+
+\begin{columns}
+\begin{column}{5.5cm}
+\[ \frac{1}{d_o} + \frac{1}{d_i} = \frac{1}{f}\]
+\end{column}
+\begin{column}{5.5cm}
+\[ \frac{h_i}{h_o} = -\frac{d_i}{d_o} = m\]
+\end{column}
+\end{columns}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Image Formation - Real Image}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/imageform2.jpg}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/imageform3.jpg}
+\end{center}
+\end{column}
+\end{columns}
+
+\vspace{1cm}
+
+The image in which light rays from one point on the object actually cross at the location of the image and can be projected onto a screen, a piece of film, or the retina of an eye is called a real image.
+
+\end{frame}
+
+\begin{frame}\frametitle{Image Formation - Virtual Image}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/imageform4.jpg}
+\end{center}
+
+If an object is held closer to the converging lens than its focal length ($f$), then the rays from a common point continue to diverge after passing through the lens. They all appear to originate from a point at the location of the image, on the same side of the lens as the object. This is a virtual image. 
+
+
+\end{frame}
+
+\begin{frame}\frametitle{Image Formation - Concave Lens}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/imageform5.jpg}
+\end{center}
+\end{frame}
 
 
 \begin{frame}\frametitle{Beam Expander/Reducer - Telescope}
