mirrors and vision

--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -563,6 +563,124 @@ m_{12} = \frac{f_2}{f_1}
 
 \end{frame}
 
+\subsection{mirrors}
+
+\begin{frame}\frametitle{Flat Mirror}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/mirrorimage1.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Concave Spherical Mirrors - Thin Lens Equivalent}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/mirrorimage2.jpg}
+\end{center}
+
+For a mirror that is large compared to the radius of curvature, the reflected rays do not cross at the same point. A parabolic mirror, the rays would indeed cross at a single point. However, parabolic mirrors are expensive. So, using a mirror that is small compared to the radius of curvature, leads to a well-defined focal point $F$, with $f = \frac{R}{2}$.
+
+\end{frame}
+
+\begin{frame}\frametitle{Convex Mirrors}
+
+\begin{center}
+\includegraphics[width=5cm]{fig/mirrorimage3.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Image Formation - Concave Mirrors}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/mirrorimage4.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Image Formation - Concave Mirrors}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/mirrorimage5.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Image Formation - Convex Mirrors}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/mirrorimage6.jpg}
+\end{center}
+
+\end{frame}
+
+\section{Vision}
+
+\begin{frame}\frametitle{The Eye}
+
+\begin{center}
+\includegraphics[width=6cm]{fig/theI.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Rods and Cones and Color}
+
+\begin{center}
+\includegraphics[width=6cm]{fig/rodscones.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Visible Spectrum}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/visSpec.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Spectrum of Light Sources}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/lightSpec.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Chromatic Aberrations}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/chromeAbb.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Correcting Chromatic Aberrations}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/chromeAbb2.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Coma - Off Axis Abberation}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/coma.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Spherical Aberrations}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/sphereAbb.jpg}
+\end{center}
+
+\end{frame}
+
 \section{Polarization}
 
 \begin{frame}\frametitle{Electromagnetic Wave}
