--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -910,6 +910,22 @@ If we pass light through smaller openings, often called slits, we can use Huygen
 \end{frame}
 
 
+\begin{frame}\frametitle{Diffraction Grating}
+\begin{columns}
+\begin{column}{5cm}
+If light is passed through a large number of evenly spaced parallel slits, called a diffraction grating, the interference pattern is created that is very similar to the one formed by a double slit. \newline
+
+Diffraction gratings can be made to work with the transmission or reflection of light. 
+\end{column}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=5.8cm]{fig/dg1.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
 \section{Polarization}
 
 \begin{frame}\frametitle{Electromagnetic Wave}
