wave optics and intro

--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -82,12 +82,190 @@
 }
 
 \begin{document}
-\title{Quantum Workforce Development}
+\title{Quantum Technician Bootcamp}
 \author{Brian Rashap}
-\date{July 2023} 
+\date{September 2025} 
 
 \begin{frame}
 \titlepage
+\end{frame}
+
+
+
+\section{Overview: QIS in NM}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide2.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide4.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide5.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide6.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide7.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide8.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide9.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide10.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide11.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide11.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide12.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide13.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide14.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide14.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/Slide15.jpeg}
+\end{center}
+\end{frame}
+
+\section{Course Overview}
+
+\begin{frame}\frametitle{Overview}
+\begin{itemize}
+\item Optics
+\item Lasers / Photonics
+\item Ultra-High Vacuum Systems
+\item Quantum Phenomenon
+\item Applied Mathematics
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Optics}
+\begin{itemize}
+\item Lab Safety and Handling of Optical Components
+\item Reflection and Refraction: Prisms, Waveguides, and Dispersion
+\item Focusing, Imaging, and the Paraxial Approximation
+\item Thin Lens
+\item Think Lens and Compound Lens
+\item Apertures, Stops, Pupils, Windows
+\item Mirrors: Convex, Concave
+\item Cameras: Focusing, Resolution, and Contrast
+\item Aberrations
+\item Telescopes / Microscopy
+\item Spectra and Filters
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Laser and Photonics}
+\begin{itemize}
+\item Laser  Safety
+\item Introduction to Lasers and Atomic Energy Levels
+\item Beam Properties: laser modes, beam profile, and coherence.
+\item Interferometry
+\item Polarization – polarizers, half/quarter wave plates
+\item Optical intensity. Single-mode and multi-mode optical fibers
+\item Optical detectors: photodiode, photomultiplier tubes, avalanche photodiodes, infrared detectors
+\item Optical spectra and emission spectroscopy
+\item Absorption Spectroscopy
+\item Optical Tweezers
+\item Industrial Applications of Laser and Photonics
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Ultra-High Vacuum Systems}
+\begin{itemize}
+\item Vacuum System Safety including Lock-out Tag-out (LOTO) of electrical and mechanical hazards
+\item Foundations of Vacuum Technology
+\item Vacuum Pump Technologies – Displacement: Backing Pumps, Turbomolecular Pumps.
+\item Vacuum Measurement: Pirani and Ion Gauges
+\item Vacuum System Assembly
+\item Vacuum System Contamination
+\item Leak Detection
+\item High Vacuum vs Ultra-High Vacuum
+
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Quantum Phenomenon}
+\begin{itemize}
+\item Introduction to Quantum 
+\item Superposition, Quantum Gates
+\item Entanglement
+\item Particle/Wave Dual Nature of Light, Polarization, and Quantum Eraser
+\item Quantum Measurements
+\item Cryogenics
+\item Superconducting and Spin Qubits
+\item Laser Cooling
+\item Atomic, Molecular, and Optical Qubits
+\item Neutral Atom QIS Operations
+\item Quantum Sensors: Diamond NV
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Applied Math}
+\begin{itemize}
+\item College Algebra
+\item Vectors
+\item Trigonometry
+\item Linear Algebra
+\item Statistics
+\end{itemize}
 \end{frame}
 
 
@@ -888,9 +1066,9 @@ If we pass light through smaller openings, often called slits, we can use Huygen
 \begin{columns}
 \begin{column}{7cm}
 \begin{itemize}
-\item Constructive Interference
+\item Constructive Interference - peaks are in phase
 \[d \sin{(\theta}) = m \lambda, m = 0,1,-1,2,-2,....\]
-\item Destructive Interference
+\item Destructive Interference - peaks are perfectly out of phase
 \[d \sin{(\theta}) = (m+\frac{1}{2})  \lambda, m = 0,1,-1,2,-2,....\]
 \end{itemize}
 \end{column}
@@ -924,6 +1102,147 @@ Diffraction gratings can be made to work with the transmission or reflection of 
 \end{column}
 \end{columns}
 \end{frame}
+
+
+\begin{frame}\frametitle{Diffraction Grating - Constructive Interference}
+\begin{columns}
+\begin{column}{7cm}
+Similar to a double slit, the constructive interference happens on integral number of wavelengths:
+
+\[d \cdot sin(\theta) = m \lambda \]
+
+for, $m = 0, 1 , -1, 2, -2, ...$
+
+
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3.8cm]{fig/dg2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Diffraction Grating - Spread of Wavelength}
+\begin{columns}
+\begin{column}{7cm}
+We can find $\theta_R$, $y_R$, $\theta_V$, and $y_V$ by using:
+
+\[d \cdot sin(\theta) = m \lambda \]
+
+for, $m = 1$.
+
+
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3.8cm]{fig/dg3.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Single Slit}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[height=7cm]{fig/sl2.jpg}
+\end{center}
+
+
+\end{column}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/sl1.jpg}
+
+\includegraphics[width=4cm]{fig/sl3.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Limits of Resolution}
+
+Diffraction affects the detail that can be observed when light passes through an aperture.
+
+\vspace{0.5cm}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/rayleigh1.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Limits of Resolution}
+
+Diffraction affects the detail that can be observed when light passes through an aperture.
+
+\vspace{0.5cm}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/rayleigh1.jpg}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Rayleigh Criterion}
+
+
+Two points are just resolved if they are separated by an angle of $\theta = 1.22 \frac{\lambda}{D}$
+
+\vspace{0.25cm}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/rayleigh2.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Resolving Power}
+\begin{columns}
+\begin{column}{7cm}
+The resolving power of a system is the smallest distance of separation ($x$) where two objects can be seen as distinct. It is given by the Rayleigh Criterion:
+
+\[\theta = 1.22 \cdot \frac{\lambda}{D} = \frac{x}{d}\]
+where $d$ is the between the lens objective and the object.
+
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/rayleigh3.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Numerical Aperture (NA)}
+\begin{columns}
+\begin{column}{8cm}
+The Numerical Aperture ($NA$) is the maximum acceptance angle of a fiber or lens. The $NA$ is a measure of the ability to gather light and resolve detail.
+
+Using the $\alpha = \frac{\theta}{2}$ and the small angle approximation:
+
+\[ sin(\alpha) = \frac{D/2}{d} = \frac{D}{2d} \]
+
+The $NA$ is defined as $NA = n \cdot sin{\alpha}$ where $n$ is the index of refraction of the medium between the objective and point P.
+
+\[ x = 1.22\frac{\lambda d}{D} = 1.22 \frac{\lambda}{2 sin(\alpha)} = 0.61 \frac{\lambda n}{NA}\]
+
+\end{column}
+\begin{column}{3cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/rayleigh3.jpg}
+\end{center}
+\end{column}
+
+\end{columns}
+
+\footnote{Small angle approximation: $\sin(\theta) = \theta$ where $\theta$ is measured in radians.}
+
+\end{frame}
+
 
 
 \section{Polarization}
