--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -1407,6 +1407,103 @@ Why are there alternating concentric circles?
 \end{frame}
 
 
+\section{The Atom}
+
+\begin{frame}\frametitle{The Electron}
+The English physicist, J.J. Thompson experimented with Cathode-Ray Tubes passing the "ray" through both electric and magnetic fields.
+\begin{columns}
+\begin{column}{7cm}
+
+
+\begin{itemize}
+\item E-field used to deflect beam:
+\[ F = q_e E \]
+\item The vertical deflection was given by:
+\[ a = \frac{F}{m_e} = \frac{q_e E}{m_e} \]
+
+\item Leading to:
+\[ \frac{q_e}{m_e} = \frac{a}{E} = -1.76 \times 10^{11} (C/kg) \]
+\end{itemize}
+\end{column}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/crt1.jpg}
+\includegraphics[width=4cm]{fig/crt2.jpg}
+\end{center}
+\begin{itemize}
+\item CRT w/Hydrogen Ion:
+\[ \frac{q_p}{m_p} = 9.58 \times 10^7 (C/kg) \]
+\end{itemize}
+
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{The Electron}
+American physicist, Robert Millikan improved on the experiment:
+\begin{columns}
+\begin{column}{7cm}
+
+
+\begin{itemize}
+\item Drop of oil in E-field
+\[ m_{drop} g = q_e E\] 
+\item where, the E-field created by voltage
+\[ E = \frac{V}{d} \]
+\end{itemize}
+\end{column}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/millkan.jpg}
+
+\end{center}
+\end{column}
+\end{columns}
+\begin{itemize}
+\item This lead to the mass of an electron:
+\[ q = \frac{m_{drop} g}{E} = \frac{m_{drop} gd}{V} = -1.6 \times 10^{-19} (C)\]
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Mass of Electron and Proton}
+With the charge of the electron known (and thus the proton), that allowed the mass of the electron and proton to be calculated:
+
+\[ m_e = \frac{q_e}{(\frac{q_e}{m_e})} = \frac{-1.6 \times 10^{-19}{-1.76 \times 10^{-11}}}  = 9.11 \times 10^{-31} (kg) \]
+
+\vspace{1cm}
+
+And, the mass the proton:
+
+\[ m_p = 1.67 \times 10^{-27} (kg) \]
+
+
+\end{frame}
+
+\begin{frame}\frametitle{The Nucleus}
+\begin{center}
+\includegraphics[width=6cm]{fig/nucleus.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Black Body Radiation}
+
+\end{frame}
+
+\begin{frame}\frametitle{Photoelectric Effect}
+
+\end{frame}
+
+\begin{frame}\frametitle{Bohr's Atom}
+
+\end{frame}
+
+
+\section{The Laser}
+
+
+
 \section{Intro to Quantum Phenomenon}
 
 \begin{frame}\frametitle{Let there be light}
